basic homepage setup for heroku speed testing

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,7 @@
 development:
   clients:
     default:
-      uri: mongodb+srv://nicolauria:2solG6EqWIh6Y0nE@cluster0.xowqb.mongodb.net/lwoods?retryWrites=true&w=majority
+      uri: <%= "#{ENV['MONGODB_URL']}" %>
       options:
         server_selection_timeout: 5
         # Note that all options listed below are Ruby driver client options (the mongo gem).
