add mongoid.yml production environment

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,10 @@
+production:
+  sessions:
+    default:
+      uri: <%= "#{ENV['MONGODB_URL']}" %>
+      options:
+        server_selection_timeout: 5
+
 development:
   clients:
     default:
