remove gemfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@
 
 # Environment Variables
 /config/local_env.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
