--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -4,6 +4,7 @@ production:
       uri: <%= "#{ENV['MONGODB_URL']}" %>
       options:
         server_selection_timeout: 5
+        raise_not_found_error: false
 
 development:
   clients:
@@ -120,7 +121,7 @@ development:
 
     # Raise an error when performing a #find and the document is not found.
     # (default: true)
-    raise_not_found_error: true
+    raise_not_found_error: false
 
     # Raise an error when defining a scope with the same name as an
     # existing method. (default: false)
